--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "content_scripts": [
         {
             "matches": ["https://*.quora.com/*"],
-            "js": ["lib/jquery/1.7.2/jquery.min.js", "main.js"],
+            "js": ["lib/jquery.min.js", "main.js"],
             "runat": "document_start"
         }
     ]
