--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
 
-    "name": "Quora Extension by 2NickPick",
+    "name": "Quora Extension by 2NickPick (forked by ShifarShifz)",
     "description": "Utilities for using Quora.com",
     "version": "0.1",
 
