--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
 	
-    "name": "Quora Extension",
-    "description": "Utilities for using Quora.com",
-    "version": "0.1",
+    "name": "Quora Top Content",
+    "description": "A Chrome extension used to hide top content from your Quora feed.",
+    "version": "2.0",
 
     "permissions": [
         "activeTab"
